# harmonization

./: N4_normalization.py  analyse_features.py  apply_nyul.py  create_fullbrain_mask.sh  harmonization_3Dfeatures.py  harmonization_3Dfeatures_(apply_mask_normalziation).py  harmonization_3Dfeatures_ADNI.py  harmonization_3Dfeatures_brain.py  harmonization_preprocess.py  identify_t1_ADNI_scans.py  identify_t1_scans.py  pyproject.toml  run_extraction_segmentation.sh  run_extraction_segmentation_ADNI.sh  run_extraction_segmentation_Brain.sh  run_normalization_segmentation.sh  run_segment_simple_initial.sh  run_segmentation.sh  run_segmentation_brain.sh  run_segmentation_initial.sh  run_segmentation_simple copy.sh  run_segmentation_simple.sh  run_segmentation_with_brain_extraction.sh  test_harmonize_med.py  utils.py
